--- a/projectReport/ref.bib
+++ b/projectReport/ref.bib
@@ -103,5 +103,71 @@ url = {http://EconPapers.repec.org/RePEc:bes:jnlasa:v:105:i:490:y:2010:p:713-726
   year = 1987
 }
 
+@inproceedings{CiresanMMGS11,
+  added-at = {2011-08-09T00:00:00.000+0200},
+  author = {Ciresan, Dan Claudiu and Meier, Ueli and Masci, Jonathan and Gambardella, Luca Maria and Schmidhuber, Jürgen},
+  biburl = {http://www.bibsonomy.org/bibtex/2b6dd360fd49e0ab7e797245696a02df3/dblp},
+  booktitle = {IJCAI},
+  editor = {Walsh, Toby},
+  ee = {http://ijcai.org/papers11/Papers/IJCAI11-210.pdf},
+  interhash = {1e6e6d3248d574911ad54646c6b6edcb},
+  intrahash = {b6dd360fd49e0ab7e797245696a02df3},
+  isbn = {978-1-57735-516-8},
+  keywords = {dblp},
+  pages = {1237-1242},
+  publisher = {IJCAI/AAAI},
+  timestamp = {2011-08-09T00:00:00.000+0200},
+  title = {Flexible, High Performance Convolutional Neural Networks for Image Classification.},
+  url = {http://dblp.uni-trier.de/db/conf/ijcai/ijcai2011.html#CiresanMMGS11},
+  year = 2011
+}
 
+@article{LinCY13,
+  author    = {Min Lin and
+               Qiang Chen and
+               Shuicheng Yan},
+  title     = {Network In Network},
+  journal   = {CoRR},
+  volume    = {abs/1312.4400},
+  year      = {2013},
+  ee        = {http://arxiv.org/abs/1312.4400},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+@incollection{NIPS2012_4824,
+title = {ImageNet Classification with Deep Convolutional Neural Networks},
+author = {Alex Krizhevsky and Sutskever, Ilya and Geoffrey E. Hinton},
+booktitle = {Advances in Neural Information Processing Systems 25},
+editor = {F. Pereira and C.J.C. Burges and L. Bottou and K.Q. Weinberger},
+pages = {1097--1105},
+year = {2012},
+publisher = {Curran Associates, Inc.},
+url = {http://papers.nips.cc/paper/4824-imagenet-classification-with-deep-convolutional-neural-networks.pdf}
+}
+
+@article{Hinton:2006:FLA:1161603.1161605,
+ author = {Hinton, Geoffrey E. and Osindero, Simon and Teh, Yee-Whye},
+ title = {A Fast Learning Algorithm for Deep Belief Nets},
+ journal = {Neural Comput.},
+ issue_date = {July 2006},
+ volume = {18},
+ number = {7},
+ month = jul,
+ year = {2006},
+ issn = {0899-7667},
+ pages = {1527--1554},
+ numpages = {28},
+ url = {http://dx.doi.org/10.1162/neco.2006.18.7.1527},
+ doi = {10.1162/neco.2006.18.7.1527},
+ acmid = {1161605},
+ publisher = {MIT Press},
+ address = {Cambridge, MA, USA},
+} 
+
+@INPROCEEDINGS{Le10tiledconvolutional,
+    author = {Quoc V. Le and Jiquan Ngiam and Zhenghao Chen and Daniel Chia and Pang Wei Koh and Andrew Y. Ng},
+    title = {Tiled convolutional neural networks},
+    booktitle = {In NIPS, in press},
+    year = {2010}
+}
 
